[gd_scene load_steps=9 format=3 uid="uid://cee8f7m3rxrue"]

[ext_resource type="Script" uid="uid://bgihsmu3lnn2t" path="res://scenes/pages/friends/add-friends/add_friend_info.gd" id="1_180ie"]
[ext_resource type="PackedScene" uid="uid://bawviwtj6m1br" path="res://scenes/pages/friends/friend-info/friend_info.tscn" id="1_oqxyh"]
[ext_resource type="PackedScene" uid="uid://crc7i3to3i23b" path="res://scenes/components/button/icon-button/icon_button.tscn" id="2_180ie"]
[ext_resource type="Texture2D" uid="uid://chje7i7qs8i10" path="res://asset/icon/add-grey.svg" id="4_180ie"]
[ext_resource type="Texture2D" uid="uid://bhheqeaow87k" path="res://asset/icon/checkmark-grey.svg" id="5_kkm8g"]
[ext_resource type="PackedScene" uid="uid://bx5ptka143dq2" path="res://scenes/components/loading/loading_spinner.tscn" id="6_vx04r"]
[ext_resource type="Texture2D" uid="uid://d1s26bqrm73sq" path="res://asset/icon/circle-grey-64.svg" id="7_0nes0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oqxyh"]

[node name="AddFriendInfo" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_180ie")

[node name="FriendInfo" parent="." instance=ExtResource("1_oqxyh")]
unique_name_in_owner = true
layout_mode = 1

[node name="AddButton" parent="." instance=ExtResource("2_180ie")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
grow_horizontal = 0

[node name="Panel" parent="AddButton" index="0"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_oqxyh")

[node name="MarginContainer" parent="AddButton" index="1"]
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Icon" parent="AddButton/MarginContainer" index="0"]
texture = ExtResource("4_180ie")

[node name="CheckMark" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CheckMark"]
layout_mode = 2
texture = ExtResource("5_kkm8g")
expand_mode = 2
stretch_mode = 5

[node name="Spinner" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LoadingSpinner" parent="Spinner" instance=ExtResource("6_vx04r")]
layout_mode = 2
size_flags_horizontal = 4
texture_progress = ExtResource("7_0nes0")

[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]

[editable path="AddButton"]
